syntax = "proto3";
package option_struct;

message Option {
  string msg = 1;
}

