syntax = "proto3";

package proto3_presence;

message A {
  optional int32 b = 1;

  oneof foo {
    int32 c = 2;
  }
}
