syntax = "proto3";
package result_enum;

enum Result {
  HELLO = 0;
}

message FailMessage {
  Result result = 1;
}
