syntax = "proto3";
package result_struct;

message Result {
  string msg = 1;
}

